--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcc 'JV'
 - !lcsh 'United States -- Emigration and immigration'
 - !lcsh 'Aliens -- United States'
+- GITenberg
 title: 'They Who Knock at Our Gates: A Complete Gospel of Immigration'
 url: http://www.gutenberg.org/ebooks/40535
